<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".view.login.LoginActivity">

    <ImageView
        android:id="@+id/dicodingImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_dicoding"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/storyLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/story"
        android:textSize="24sp"
        android:textColor="?attr/colorPrimary"
        android:letterSpacing="0.5"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintBottom_toBottomOf="@+id/dicodingImage"
        app:layout_constraintEnd_toEndOf="@+id/dicodingImage"
        app:layout_constraintStart_toStartOf="@+id/dicodingImage" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/story"
        android:textSize="20sp"
        android:textColor="?attr/colorOnPrimary"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dicodingImage" />

    <TextView
        android:id="@+id/loginDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login_description"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginDescription"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="?attr/colorPrimary"
        app:endIconMode="clear_text">

        <com.anisanurjanah.dicodingstoryapp.view.customviews.EmailCustomView
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="48dp"
            android:paddingTop="17dp"
            android:paddingBottom="17dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        app:endIconMode="password_toggle"
        app:endIconTint="?attr/colorPrimary"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="?attr/colorPrimary">

        <com.anisanurjanah.dicodingstoryapp.view.customviews.PasswordCustomView
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="48dp"
            android:paddingTop="17dp"
            android:paddingBottom="17dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_background"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="?attr/colorOnSecondary"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />

    <TextView
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/signup_to_login"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>